@@ -16,28 +16,17 @@
 ###CONTROL_TABLETYPE_HOME_LINK### Subpart für Link auf Tabellentyp Heim
 ###CONTROL_TABLETYPE_AWAY_LINK### Subpart für Link auf Tabellentyp Auswärts
 
-###CONTROL_TABLETYPE_NORMAL_LINK_URL### Marker für URL auf Tabellentyp normal
-###CONTROL_TABLETYPE_HOME_LINK_URL### Marker für URL auf Tabellentyp Heim
-###CONTROL_TABLETYPE_AWAY_LINK_URL### Marker für URL auf Tabellentyp Auswärts
-
-###CONTROL_TABLESCOPE_NORMAL_LINK### Subpart für Link auf Tabellenscope normal
-###CONTROL_TABLESCOPE_FIRST_LINK### Subpart für Link auf Tabellenscope Hinrunde
-###CONTROL_TABLESCOPE_SECOND_LINK### Subpart für Link auf Tabellenscope Rückrunde
-
 ###CONTROL_POINTSYSTEM_POINT3_LINK### Subpart für Link auf 3-Punkte-Tabelle
 ###CONTROL_POINTSYSTEM_POINT2_LINK### Subpart für Link auf 2-Punkte-Tabelle
 
-Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei aktive Links unterschieden werden!
+Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden, wobei aktive Links unterschieden werden!
 
+Notice: Each ROW is here an object of type club!
 ###ROW### Subpart für eine Zeile der Tabelle
 ###ROW_ROLL### Marker für den Typ einer Zeile. Dies ist eine laufende Nummer bei 0 beginnend und leaguetable.table.rowroll endend.
-###ROW_MARKCLUB### Marker zur Markierung von ausgewählten Teams. Dies sollte eine CSS-Klasse sein
-###ROW_MARK### Marker zur Markierung von bestimmten Tabellenpositionen. Der Inhalt wird aus dem Wettbewerbsdatensatz geholt.
+###ROW_MARKCLUB### Marker zur Markierung von ausgewählten Vereins. Dies sollte eine CSS-Klasse sein
 ###ROW_POSITION### Marker für Tabellenplatz
-###ROW_POSITIONCHANGE### Marker für Tabellenplatzänderung
-###ROW_OLDPOSITION### Marker für Tabellenplatz des vorherigen Spieltags
-###ROW_...### Marker für Werte aus dem Teamdatensatz
-###ROW_LINK### Subpart für Link auf die Teamdarstellung
+###ROW_...### Marker für Werte aus dem Vereinsdatensatz
 ###ROW_MATCHCOUNT### Marker für Anzahl der Spiele
 </pre>
 
@@ -53,14 +42,6 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 </p>
 ###CONTROL_TABLETYPE###
 
-###CONTROL_TABLESCOPE###
-<p>
-###CONTROL_TABLESCOPE_NORMAL_LINK### ###CONTROL_TABLESCOPE_NORMAL### ###CONTROL_TABLESCOPE_NORMAL_LINK### 
-###CONTROL_TABLESCOPE_FIRST_LINK### ###CONTROL_TABLESCOPE_FIRST### ###CONTROL_TABLESCOPE_FIRST_LINK### 
-###CONTROL_TABLESCOPE_SECOND_LINK### ###CONTROL_TABLESCOPE_SECOND### ###CONTROL_TABLESCOPE_SECOND_LINK###
-</p>
-###CONTROL_TABLESCOPE###
-
 ###CONTROL_POINTSYSTEM###
 <p>
 ###CONTROL_POINTSYSTEM_POINT3_LINK### ###CONTROL_POINTSYSTEM_POINT3### ###CONTROL_POINTSYSTEM_POINT3_LINK###
@@ -71,6 +52,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 </div>
 <!-- ###CONTROLS### end -->
 
+###ROWS###
 <div class="cfcleague-leaguetable">
 <table cellspacing="0" cellpadding="0" class="cfcleague-leaguetable">
 <tr>
@@ -79,8 +61,8 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 
 ###ROW###
 <tr class="cfcleague-leaguetable-row###ROW_ROLL### ###ROW_MARKCLUB### cfcleague-leaguetable-row_###ROW_MARK###">
-  <td>###ROW_POSITION###. (###ROW_OLDPOSITION###)</td>
-  <td>###ROW_LOGO### ###ROW_SHOWTEAMLINK######ROW_NAME######ROW_PENALTIES######ROW_SHOWTEAMLINK### (###ROW_SHOWMATCHTABLELINK######LABEL_MATCHTABLE######ROW_SHOWMATCHTABLELINK###)</td>
+  <td>###ROW_POSITION###.</td>
+  <td>###ROW_LOGO### ###ROW_NAME###</td>
   <td>###ROW_MATCHCOUNT###</td>
   <td>###ROW_WINCOUNT###</td>
   <td>###ROW_DRAWCOUNT###</td>
@@ -91,17 +73,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 </tr>
 ###ROW###
 </table>
-
-<!-- ###PENALTIES### start -->
-<div class="cfcleague-leaguetable-comments">
-
-<h3>Hinweise</h3>
-<!-- ###PENALTY### start -->
-<p class="cfcleague-leaguetable-comment">* ###PENALTY_COMMENT###
-</p>
-<!-- ###PENALTY### end -->
-</div>
-<!-- ###PENALTIES### end -->
+###ROWS###
 
 </div>
 <!-- ###LEAGUE_TABLE### end -->
